- Fix scrollbar

--- a/sass/controls/_charts.scss
+++ b/sass/controls/_charts.scss
@@ -523,7 +523,7 @@
 
 .chart-targeted-achievement {
   // scss-lint:disable ImportantRule
-  margin-bottom: 22px !important;
+  margin-bottom: 18px !important;
   // scss-lint:enable ImportantRule
 
   .label {
